# com.redhat.devices

./: .gitignore  Makefile.am  README.md  com.redhat.devices.spec  configure.ac  io.systemd.devices.spec  meson.build
src/: com.redhat.devices.varlink  io.systemd.devices.varlink  main.c  meson.build
